@@ -1,6 +1,6 @@
 {
   "name": "options-definitely",
-  "version": "0.6.6",
+  "version": "0.6.7",
   "description": "This framework plugin makes adding options screens with sections and fields to WordPress very simple, yet flexible.",
   "keywords": [
     "wordpress",
